docs: 使い方ガイド（guide.html）を追加し、エディタからリンク

--- a/srt-editor.html
+++ b/srt-editor.html
@@ -851,6 +851,7 @@
             <div class="toolbar-title">SRT Editor <span>→ FCPXML</span></div>
         </div>
         <div class="toolbar-right">
+            <button class="tb-btn" onclick="window.open('guide.html', '_blank')" title="使い方ガイド">📖</button>
             <button class="tb-btn" onclick="toggleLayout()" title="レイアウト変更">◨ レイアウト</button>
             <button class="tb-btn" onclick="addSubtitle()">＋ 字幕追加</button>
             <button class="tb-btn" id="searchBtn" onclick="toggleSearchPanel()">🔍 検索・置換</button>
