docs: 商用利用無料・クレジット表記不要の記載を追加

--- a/guide.html
+++ b/guide.html
@@ -289,6 +289,10 @@
                     <h3>💡 カンタン・完全無料</h3>
                     <p>月額課金も買い切りも不要。複数行の字幕やFCPXMLへの完璧な出力など、プロ仕様の機能を搭載していながら完全無料でいつでも使えます。</p>
                 </div>
+                <div class="feature-item">
+                    <h3>💼 商用無料・クレジット不要</h3>
+                    <p>お仕事での動画制作や、企業用コンテンツの作成にも自由にお使いいただけます。クレジット表記の必要も一切ありません。</p>
+                </div>
             </div>
         </div>
 
@@ -324,7 +328,8 @@
                 </li>
                 <li><strong>文字数確認と警告:</strong> テキストボックスの右下には文字数が表示され、1行あたり「20文字」を超えると文字数がオレンジ色になって警告してくれます。</li>
                 <li><strong>分割と結合:</strong> 字幕をカーソル位置で2つに分けたい時は <kbd>Option</kbd> + <kbd>C</kbd> を、下の字幕とくっつけたい時は
-                    <kbd>Option</kbd> + <kbd>V</kbd> を押すと一瞬で処理されます。</li>
+                    <kbd>Option</kbd> + <kbd>V</kbd> を押すと一瞬で処理されます。
+                </li>
                 <li><strong>検索と置換:</strong> 右上の「🔍 検索・置換」ボタンから、全体のエラー文字などを一括で置換できます（例：「えーっと」等のケバ取りなど）。</li>
             </ul>
         </div>
@@ -343,7 +348,8 @@
                 <li><strong>波形のズーム:</strong> 細かい音を確認したい時は、右下の <kbd>↔＋</kbd> <kbd>↔ー</kbd>
                     ボタンで時間軸を拡大/縮小できます。<kbd>↕＋</kbd>で波形の高さを強調することも可能です。</li>
                 <li><strong>ショートカットでタイミングを打つ:</strong> リストで調整したい字幕を選択した状態で、動画を再生しながら最適なタイミングで <kbd>Option</kbd> +
-                    <kbd>I</kbd>（IN点）または <kbd>Option</kbd> + <kbd>O</kbd>（OUT点）を押すとタイムコードが上書きされます。</li>
+                    <kbd>I</kbd>（IN点）または <kbd>Option</kbd> + <kbd>O</kbd>（OUT点）を押すとタイムコードが上書きされます。
+                </li>
             </ul>
         </div>
 
