docs: フレームオフセットの重要性と、単体SRT/VTTエディタとしてのウリを追記

--- a/guide.html
+++ b/guide.html
@@ -267,7 +267,9 @@
 
     <div class="container">
         <h1>SRT Editor → FCPXML 使い方ガイド</h1>
-        <p class="lead">Final Cut Proに日本語自動字幕を取り込むための「最速・最強」ワークフローツール</p>
+        <p class="lead">Final Cut Proに日本語自動字幕を取り込むための「最速・最強」ワークフローツール。<br>
+            <strong>純粋なSRT / VTTの編集エディタとしても非常に重宝します。</strong>
+        </p>
 
         <!-- アプリの特徴（ウリ） -->
         <div class="features-section">
@@ -292,6 +294,10 @@
                 <div class="feature-item">
                     <h3>💼 商用無料・クレジット不要</h3>
                     <p>お仕事での動画制作や、企業用コンテンツの作成にも自由にお使いいただけます。クレジット表記の必要も一切ありません。</p>
+                </div>
+                <div class="feature-item">
+                    <h3>🎬 汎用的なSRT/VTTエディタしての活用</h3>
+                    <p>FCPXMLへの変換だけでなく、右上の保存ボタンから「純粋なSRTやVTT」として直接保存も可能。他の動画編集ソフトやYouTube公開用字幕のエディタとしても大活躍します。</p>
                 </div>
             </div>
         </div>
@@ -380,7 +386,10 @@
             <ul>
                 <li><strong>フレームレート:</strong> 必ずFinal Cut
                     Proで作成しているプロジェクト設定（通常は29.97fpsや60fps）と同じものを選択してください。これがズレるとFCP上でタイミングが狂います。</li>
-                <li><strong>解像度:</strong> フルHD、4K、またはモバイル向けの縦型動画（9:16）などを選べます。</li>
+                <li><strong>解像度・縦横:</strong> フルHD、4K、またはモバイル向けの縦型動画（9:16）などを選べます。</li>
+                <li><strong>🔥 フレームオフセット（超重要）:</strong>
+                    自動字幕やFCPの設定の都合により、FCP上でどうしても数フレームのズレが生じる場合があります。その場合、このオプションで「-5」や「2」など指定して書き出すことで、完璧に同期した字幕を作れます。
+                </li>
                 <li><strong>縦位置の調整:</strong> デフォルトでは「下から10%」の位置に字幕が出ます。動画のテロップ位置などに合わせて必要であれば数値を変更してください。</li>
             </ul>
 
